# LichtFeld-Studio

./: .gdbinit  .gitignore  CMakeLists.txt  DEBUGGING_STATUS.md  README.md  vcpkg.json
.github/: dependabot.yml
.github/workflows/: clang-format.yml  ubuntu.yml  windows.yml
docker/: Dockerfile  run_docker.sh
docs/: package.json  pnpm-lock.yaml
fastgs/: CMakeLists.txt
fastgs/optimizer/include/: adam_api.h
fastgs/optimizer/src/: adam_api.cu
fastgs/rasterization/include/: buffer_utils.h  rasterization_api.h  rasterizer_memory_arena.h
fastgs/rasterization/src/: backward.cu  forward.cu  rasterization_api.cu  rasterizer_memory_arena.cu
fastgs/utils/: torch_utils.h
gsplat/: CMakeLists.txt  Ops.h  Rasterization.cpp
include/core/: aligned_memory_pool.hpp  camera.hpp  camera_new.hpp  camera_ref.hpp  cuda_memory_guard.hpp  events.hpp  gpu_config.hpp  image_io_new.hpp  logger.hpp  memory_pool.hpp  packed128.cuh  pinned_memory_allocator.hpp  point_cloud.hpp  point_cloud_new.hpp  point_cloud_ref.hpp  sogs_new.hpp  splat_data.hpp  splat_data_new.hpp  splat_data_ref.hpp  tensor.hpp  tensor_broadcast.hpp  tensor_broadcast_ops.cuh  tensor_expr.hpp  tensor_expr_impl.hpp  tensor_functors.hpp  tensor_generic_ops.cuh  tensor_ops.hpp  tensor_vectorized_ops.cuh  warp_reduce.cuh
include/core_new/: argument_parser.hpp  camera.hpp  events.hpp  image_io.hpp  logger.hpp  parameters.hpp  pinned_memory_allocator.hpp  point_cloud.hpp  sogs.hpp  splat_data.hpp  tensor.hpp
include/kernels/: bilateral_grid.cuh  kmeans_new.cuh  morton_encoding_new.cuh  regularization.cuh  ssim.cuh  training_kernels.cuh
include/loader/: cache_image_loader.hpp  loader.hpp
include/loader_new/: cache_image_loader.hpp  filesystem_utils.hpp  loader.hpp
kernels/: cuda_gl_interop.cu  kmeans.cu
scripts/: README_TENSORRT.md
src/: main.cpp
src/core/: CMakeLists.txt  camera.cpp  camera_new.cpp  camera_ref.cpp  image_io_new.cpp  kmeans_new.cu  morton_encoding_new.cu  pinned_memory_allocator.cpp  sogs_new.cpp  splat_data.cpp  splat_data_new.cpp  splat_data_ref.cpp  tensor.cpp  tensor_broadcast.cpp  tensor_broadcast_ops.cu  tensor_load_ops.cpp  tensor_masking_ops.cpp  tensor_masking_ops.cu  tensor_math_ops.cpp  tensor_matrix_ops.cpp  tensor_matrix_ops.cu  tensor_movement_ops.cpp  tensor_ops.cpp  tensor_ops.cu  tensor_random_ops.cpp  tensor_random_ops.cu  tensor_reduction_ops.cpp  tensor_shape_ops.cpp  tensor_unified_ops.cpp  tensor_utils.cpp
src/core/tensor/: tensor.cpp  tensor_advanced_ops.cpp  tensor_broadcast.cpp  tensor_broadcast_ops.cu  tensor_dot_optimized.cu  tensor_masking_ops.cpp  tensor_masking_ops.cu  tensor_matrix_ops.cpp  tensor_matrix_ops.cu  tensor_movement_ops.cpp  tensor_ops.cu  tensor_random_ops.cu  tensor_shape_ops.cpp  tensor_strided_ops.cu  tensor_unified_ops.cpp  tensor_utils.cpp  tensor_warp_reduce.cu
src/core_new/: CMakeLists.txt  application.cpp  argument_parser.cpp  camera.cpp  image_io.cpp  parameters.cpp  sogs.cpp  sogs_stub.cpp  splat_data.cpp
src/core_new/tensor/: CMakeLists.txt  offset_allocator.cpp  pinned_memory_allocator.cpp  tensor.cpp  tensor_advanced_ops.cpp  tensor_broadcast.cpp  tensor_broadcast_ops.cu  tensor_masking_ops.cpp  tensor_masking_ops.cu  tensor_matrix_ops.cpp  tensor_movement_ops.cpp  tensor_ops.cu  tensor_random_ops.cpp  tensor_random_ops.cu  tensor_shape_ops.cpp  tensor_strided_ops.cu  tensor_unified_ops.cpp  tensor_utils.cpp  tensor_warp_reduce.cu
src/core_new/tensor/internal/: gpu_arena_allocator.hpp  memory_pool.hpp  packed128.cuh  stream_pool.hpp  tensor_broadcast_ops.cuh  tensor_expr_impl.hpp  tensor_functors.hpp  tensor_generic_ops.cuh  tensor_impl.hpp  tensor_ops.hpp  vmm_allocator.cpp  vmm_allocator.hpp
src/training_new/: CMakeLists.txt  dataset.hpp  trainer.cpp  trainer.hpp  training_setup.cpp  training_setup.hpp
src/training_new/components/: bilateral_grid.cpp  bilateral_grid.hpp  sparsity_optimizer.cpp  sparsity_optimizer.hpp
src/training_new/fastgs/: CMakeLists.txt
src/training_new/fastgs/optimizer/include/: adam_kernels.cuh
src/training_new/fastgs/rasterization/include/: buffer_utils.h  kernels_forward.cuh  rasterization_api.h  rasterization_config.h  rasterizer_memory_arena.h
src/training_new/fastgs/rasterization/src/: forward.cu  rasterization_api.cu  rasterizer_memory_arena.cu
src/training_new/kernels/: bilateral_grid_backward.cu  bilateral_grid_forward.cu  densification_kernels.cu  densification_kernels.hpp  l1_loss.cu  mcmc_kernels.cu  mcmc_kernels.hpp  ssim.cu
src/training_new/losses/: photometric_loss.cpp  photometric_loss.hpp  regularization.cpp  regularization.hpp
src/training_new/optimizer/: adam_optimizer.cpp  adam_optimizer.hpp  scheduler.cpp  scheduler.hpp
src/training_new/rasterization/: fast_rasterizer.cpp  fast_rasterizer.hpp
src/training_new/strategies/: default_strategy.cpp  istrategy.hpp  mcmc.cpp  mcmc.hpp  strategy_utils.cpp
tests/: CMakeLists.txt  benchmark_default_strategy.cpp  benchmark_losses.cpp  benchmark_scheduler.cpp  benchmark_slice_assignment.cpp  benchmark_strided_tensors.cpp  profile_adam_optimizer.cpp  test_aligned_memory_pool.cpp  test_bilateral_grid.cpp  test_bool_reduction.cpp  test_broadcast_benchmark.cpp  test_bug_regressions.cpp  test_bugs_found.cpp  test_camera.cpp  test_critical_fixes.cpp  test_cub_reduction_benchmark.cpp  test_cuda_device_state.cpp  test_dataloader_lfs.cpp  test_default_strategy.cpp  test_default_strategy_comparison.cpp  test_default_strategy_operations_comparison.cpp  test_default_strategy_vs_reference.cpp  test_densification.cpp  test_dtype_operations_comprehensive.cpp  test_expression_templates.cpp  test_fusion_benchmark.cpp  test_gather_benchmark.cpp  test_gut_autograd_vs_manual.cpp  test_gut_gradient_comparison.cpp  test_gut_manual_vs_autograd.cpp  test_gut_rasterizer_gradients.cpp  test_image_io_comparison.cpp  test_kmeans.cpp  test_kmeans_comparison.cpp  test_kmeans_details.cpp  test_lfs_adam_optimizer.cpp  test_lfs_losses.cpp  test_lfs_scheduler.cpp  test_loader_comparison.cpp  test_loss_gradients.cpp  (+51 more)
tools/: gdb_config.xml
(+184 files in other folders)
